completed desktop design

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <p class="fraunces-700">$149.99</p>
           <p>$169.99</p>
         </div>
-        <button class="montserrat-700">Add to Cart</button>
+        <button tabindex="0" class="montserrat-700">Add to Cart</button>
       </main>
     </div>
   </body>
